commiting hosting attempt changes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "listings-page",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://gitname.github.io/listing-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
